--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "minau"
 version = "0.2.0"
 edition = "2024"
+license = "BSD-3-Clause"
+authors = ["sirasaki-konoha <konoha@pik6c.tech>"]
+description = "A command-line music player built with Rust using Rodio."
 
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
