--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ crossterm = "0.29.0"
 humantime = "2.3.0"
 indicatif = "0.18.0"
 lofty = "0.22.4"
+once_cell = "1.21.3"
 rodio = "0.21.1"
 tokio = { version = "1.47.1", features = ["full"] }
