--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ description = "A command-line music player built with Rust using Rodio."
 clap = { version = "4.5.48", features = ["derive"] }
 crossterm = "0.29.0"
 humantime = "2.3.0"
+image = "0.25.8"
 indicatif = "0.18.0"
 lofty = "0.22.4"
+minifb = "0.28.0"
 once_cell = "1.21.3"
 rodio = "0.21.1"
 tokio = { version = "1.47.1", features = ["full"] }
