--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.4"
 edition = "2024"
 license = "BSD-3-Clause"
 authors = ["sirasaki-konoha <konoha@pik6c.tech>"]
-description = "A command-line music player built with Rust using Rodio."
+description = "A simple, minimal music player"
 
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
