--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ minifb = "0.28.0"
 once_cell = "1.21.3"
 rodio = "0.21.1"
 tokio = { version = "1.47.1", features = ["full"] }
+unicode-width = "0.2.1"
