--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,14 @@ once_cell = "1.21.3"
 rodio = "0.21.1"
 tokio = { version = "1.47.1", features = ["full"] }
 unicode-width = "0.2.1"
+
+
+[profile.release]
+opt-level = 3
+debug = false
+strip = "debuginfo"
+panic = "abort"
+overflow-checks = false
+lto = "fat"
+codegen-units = 1
+
