--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,15 @@ indicatif = "0.18.0"
 lofty = "0.22.4"
 minifb = "0.28.0"
 once_cell = "1.21.3"
-reqwest = { version = "0.12.23", features = ["stream"] }
 symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis"] }
 rodio = "0.21"
 tokio = { version = "1.47.1", features = ["full"] }
 unicode-width = "0.2.1"
-
+hyper = { version = "1.5", features = ["client", "http1", "http2"] }
+hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
+hyper-tls = "0.6"
+http-body-util = "0.1"
+infer = "0.19.0"
 
 [profile.release]
 opt-level = 3
