--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", 
 hyper-tls = "0.6"
 http-body-util = "0.1"
 infer = "0.19.0"
+url = "2.5.7"
 
 [profile.release]
 opt-level = 3
