--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,23 +10,27 @@ description = "A simple, minimal music player"
 bytes = "1.10.1"
 clap = { version = "4.5.48", features = ["derive"] }
 crossterm = "0.29.0"
-futures-util = "0.3.31"
 humantime = "2.3.0"
 image = "0.25.8"
 indicatif = "0.18.0"
 lofty = "0.22.4"
 minifb = "0.28.0"
 once_cell = "1.21.3"
-symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis"] }
-rodio = "0.21"
-tokio = { version = "1.47.1", features = ["full"] }
+symphonia = { version = "0.5", features = ["all"] }
+rubato = "0.15"
+cpal = "0.15"
+ringbuf = "0.3"
+parking_lot = "0.12"
 unicode-width = "0.2.1"
 hyper = { version = "1.5", features = ["client", "http1", "http2"] }
-hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
+hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
 hyper-tls = "0.6"
 http-body-util = "0.1"
 infer = "0.19.0"
 url = "2.5.7"
+smol = "2.0.2"
+async-channel = "2.5.0"
+async-compat = "0.2.5"
 
 [profile.release]
 opt-level = 3
