--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,24 +18,30 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: target/release/minau
-            asset_name: minau
+            artifact_name: target/release/your-app-name
+            asset_name: your-app-name-linux-x86_64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: target/release/minau.exe
-            asset_name: minau.exe
+            artifact_name: target/release/your-app-name.exe
+            asset_name: your-app-name-windows-x86_64.exe
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: target/release/minau
-            asset_name: minau
+            artifact_name: target/release/your-app-name
+            asset_name: your-app-name-macos-x86_64
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: target/release/minau
-            asset_name: minau
+            artifact_name: target/release/your-app-name
+            asset_name: your-app-name-macos-aarch64
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install dependencies (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libasound2-dev pkg-config libssl-dev
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -65,17 +71,17 @@ jobs:
 
       - name: Strip binary (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: strip target/${{ matrix.target }}/release/minau
+        run: strip target/${{ matrix.target }}/release/your-app-name
 
       - name: Strip binary (macOS)
         if: matrix.os == 'macos-latest'
-        run: strip target/${{ matrix.target }}/release/minau
+        run: strip target/${{ matrix.target }}/release/your-app-name
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.asset_name }}
-          path: target/${{ matrix.target }}/release/minau${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+          path: target/${{ matrix.target }}/release/your-app-name${{ matrix.os == 'windows-latest' && '.exe' || '' }}
 
   release:
     name: Create Release
