--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install dependencies (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libasound2-dev \
+            pkg-config \
+            libssl-dev \
+            build-essential
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
